fix header back button alignment

--- a/www/less/header.less
+++ b/www/less/header.less
@@ -33,7 +33,7 @@
 	.header-goback {
 		width: auto;
 		min-width: 150px;
-		padding-top: 28px;
+		padding-top: 31px;
 		padding-right: 35px;
 		a {
 			font-size: 16px;
